# AutoMUSic

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake
lib/: libSDL.dylib
src/impl/: AMUS_audio_io.cpp  AMUS_notes.cpp  notes.cpp  player.cpp
src/incl/: AMUS_audio_io.hpp  AMUS_notes.hpp  notes.h  notes.hpp
