project(audio_io)
cmake_minimum_required (VERSION 3.0.2)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")

add_executable(${PROJECT_NAME} ./src/impl/AMUS_${PROJECT_NAME}.cpp)

INCLUDE(FindPkgConfig)

PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2)
PKG_SEARCH_MODULE(SDL2 REQUIRED sdl2_mixer)

INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIRS} ${SDL2AUDIO_INCLUDE_DIRS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARIES} ${SDL2AUDIO_LIBRARIES} ${SDL2_MIXER_LIBRARY})

SET(EXECUTABLE_OUTPUT_PATH "./bin")
SET(LIBRARY_OUTPUT_PATH "./lib")